--- a/todo.css
+++ b/todo.css
@@ -6,8 +6,6 @@
   box-sizing: border-box;
 }
 body {
-  width: 100vw;
-  height: 100vh;
   background-image: linear-gradient(
       rgba(0, 0, 0, 0.4) 50%,
       rgba(0, 0, 0, 0.4) 50%
@@ -18,22 +16,21 @@ body {
   background-attachment: fixed;
 }
 .container {
-  min-width: 400px;
-  height: 100vh;
   display: flex;
   justify-content: center;
   position: relative;
-  margin: 0;
+  margin-top: 60px;
   padding: 0;
+  background-color: #555;
 }
 .todo {
-  min-width: 400px;
+  max-width: 400px;
   background-color: white;
   border-radius: 15px;
   display: flex;
   flex-direction: column;
   padding: 20px;
-  margin: 20px;
+
   overflow: hidden;
   position: absolute;
   top: 10%;
@@ -55,7 +52,6 @@ body {
   font-style: normal;
 }
 .input {
-  max-width: 100%;
   margin-top: 2vmin;
   display: flex;
   align-items: center;
@@ -147,16 +143,22 @@ ul span:hover {
 @media only screen and (max-width: 450px) {
   body {
     background-image: none;
+    padding: 0%;
+    margin: 0;
+    overflow: hidden;
+  }
+  .container {
+    margin-top: 0;
   }
   .todo {
-    width: 450px;
+    width: 100%;
     border-radius: 0px;
     overflow: hidden;
     position: absolute;
     top: -2%;
     margin: 0px;
     padding-bottom: 60px;
-    padding-left: 11vmin;
+    padding-left: 5vmin;
   }
   .heading {
     display: flex;
